# SCPP-ImGui

./: .gitignore  App.cpp  AppState.cpp  AppState.h  CMakeLists.txt  README.md  Resource.aps  Resource.rc  Router.cpp  Router.h  imgui.ini  localstorage.json  log.txt  scpp-imgui.sln  scpp-imgui.vcxproj  scpp-imgui.vcxproj.filters
Debug/: vc143.idb
Debug/scpp-imgui.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  scpp-imgui.lastbuildstate
docs/: README.md
include/curlcpp/: curl_config.h
include/implot/: implot.cpp
lib/: libcurl.exp
src/: Config.cpp  Config.h
src/documentos/: CategoriaPicker.cpp  CategoriaPicker.h  Documentos.cpp  SingleDoc.cpp  SingleDoc.h  TipoDocPicker.cpp  TipoDocPicker.h  documentos.cpp  documentos.h
src/graph/: CategoryGraph.cpp  CategoryGraph.h  TimeGraph.cpp  TimeGraph.h
src/helpers/: ApiHelper.cpp  ApiHelper.h  ApiHelperC.cpp  ApiHelperC.h  FileLogger.cpp  FileLogger.h  FormatNumber.cpp  FormatNumber.h  TimerC.cpp  TimerC.h  Utilities.cpp  Utilities.h  imguidatechooser.cpp  imguidatechooser.h
src/login/: Login.cpp  Login.h
x64/Debug/: Resource.res  apihelper.obj.enc  documentos.obj.enc  scpp-imgui.exe.recipe  scpp-imgui.vcxproj.FileListAbsolute.txt  singledoc.obj.enc  vc143.idb
x64/Debug/scpp-imgui.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  rc.command.1.tlog  rc.read.1.tlog  rc.write.1.tlog  scpp-imgui.lastbuildstate
